test: 자동 배포 테스트

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <title>OUCH!</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <h1>OUCH!</h1>
+      <p>hiohi</p>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
