feat: 프롬프팅 수정

--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link
       rel="apple-touch-icon"
-      href="/apple-touch-icon-180x180.png"
-      sizes="180x180"
+      href="/apple-touch-icon-144x144.png"
+      sizes="144x144"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OUCH!</title>
   </head>
   <body>
-    <div id="root">
-      <h1>OUCH!</h1>
-      <p>hiohi</p>
-    </div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
